plugins {
    id "com.github.johnrengelman.shadow" version "7.0.0"
    id "application"
    id "java"
}

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17

mainClassName = "org.meteordev.meteorbot.MeteorBot"

repositories {
    mavenCentral()
}

dependencies {
    implementation "net.dv8tion:JDA:5.0.0-alpha.22"
    implementation "com.konghq:unirest-java:3.13.13"
    implementation "ch.qos.logback:logback-classic:1.4.5"
    implementation "io.github.cdimascio:dotenv-java:2.2.4"
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

shadowJar {
    classifier = ""
}

jar {
    manifest.attributes.put("Main-Class", mainClassName)
}
